# signal-composer-plugin-gateway

./: .gitignore  CMakeLists.txt  README.md
conf.d/cmake/: config.cmake
conf.d/etc/: configs.json
conf.d/wgt/: config.xml.in
docs/: 1-architecture-presentation.md  2-installation-guide.md  3-configuration.md  4-usage-guide.md
plugins/: CMakeLists.txt  source.cpp
